<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_video" />
        <item
            android:id="@+id/nav_exerciseYN"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/exerciseYN" />
        <item
            android:id="@+id/nav_exercizeWrite"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/exercizeWrite" />
        <item
            android:id="@+id/nav_matching"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/matching" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/quiz" />
    </group>
</menu>